# lib2notebook2lib

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
crash-pkg/: README.md  pyproject.toml
src/lib2notebook2lib/: __init__.py  __main__.py  cli.py  extractor.py  inference.py  parser.py  reverser.py  scaffold.py  schema.py  sdk.py  writer.py
tests/: test_cli.py  test_extractor.py  test_inference.py  test_parser.py  test_reverser.py  test_reverser_integration.py  test_scaffold.py  test_sdk.py  test_writer.py
